--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <aside>
       <div>
         <form>
-          <h1></h1>
+          <h1>Search for a city:</h1>
           <texarea></texarea>
           <button>Search</button>
         </form>
@@ -25,7 +25,7 @@
       </div>
     </aside>
 
-    <body id="todayForecastBody">
+    <body id="todayFCBody">
       <!--
         <h1></h1>
         <img>
@@ -35,7 +35,7 @@
       -->
     </body>
 
-    <section>
+    <section id="fiveDayFC">
       <!--
         <div x5>
           <h1></h1>
