added city search and the forecast cards now get dates

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <form id="citySearchForm">
             <h1>Search for a city:</h1>
             <div id="citySearchText">
-              <textarea id="cityTextArea">Search here</textarea>
+              <textarea id="cityTextArea"></textarea>
               <button>Search</button>
             </div>
           </form>
@@ -28,25 +28,9 @@
         
           <section id="FCSections">
             <section  id="todayFCBody">
-              <!--
-                <h1></h1>
-                <img>
-                <p></p>
-                <p></p>
-                <p></p>
-              -->
             </section>
           
             <section id="fiveDayFC">
-              <!--
-                <div x5>
-                  <h1></h1>
-                  <img>
-                  <p></p>
-                  <p></p>
-                  <p></p>
-                </div>
-              -->
             </section>
           </section>
     </main>
