--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1>Search for a city:</h1>
             <div id="citySearchText">
               <textarea id="cityTextArea"></textarea>
-              <button>Search</button>
+              <button id="searchButton">Search</button>
             </div>
           </form>
           <div id="cityButtonDiv">
@@ -30,7 +30,10 @@
             <section  id="todayFCBody">
             </section>
           
+
+            <h1>5-Day Forecast:</h1>
             <section id="fiveDayFC">
+
             </section>
           </section>
     </main>
